# serenity

Base/etc/: SystemServer.ini
Base/home/anon/.config/: SystemServer.ini
Base/res/apps/: UserSettings.af
Base/usr/share/man/man5/: SystemServer.md
Meta/: build-root-filesystem.sh  run.sh
Userland/Applets/ClipboardHistory/: ClipboardHistoryModel.h
Userland/Applications/: CMakeLists.txt
Userland/Applications/Escalator/: CMakeLists.txt  EscalatorWindow.cpp  EscalatorWindow.h  main.cpp
Userland/Applications/Settings/: main.cpp
Userland/Applications/UserSettings/: CMakeLists.txt  ConnectionToServer.cpp  ConnectionToServer.h  GroupsModel.cpp  GroupsModel.h  Settings.h  StringArrayModel.cpp  StringArrayModel.h  UserProperties.cpp  UserProperties.gml  UserProperties.h  UserPropertiesGeneralTab.cpp  UserPropertiesGeneralTab.gml  UserPropertiesGeneralTab.h  UserPropertiesGroupsTab.cpp  UserPropertiesGroupsTab.gml  UserPropertiesGroupsTab.h  UserPropertiesPasswordTab.cpp  UserPropertiesPasswordTab.gml  UserPropertiesPasswordTab.h  UserSettingsWidget.cpp  UserSettingsWidget.gml  UserSettingsWidget.h  UsersModel.cpp  UsersModel.h  main.cpp
Userland/Libraries/: CMakeLists.txt
Userland/Libraries/LibAuth/: Auth.cpp  Auth.h  CMakeLists.txt  EscalatorWindow.cpp  EscalatorWindow.h
Userland/Libraries/LibC/: grp.cpp
Userland/Libraries/LibCore/: Account.cpp  Account.h  Group.cpp
Userland/Libraries/LibEscalator/: CMakeLists.txt  EscalatorWindow.cpp  EscalatorWindow.h
Userland/Libraries/LibGUI/: CheckBox.cpp  CheckBox.h  SettingsWindow.cpp  SettingsWindow.h
Userland/Libraries/LibGUI/Wizards/: WizardDialog.cpp  WizardDialog.h
Userland/Services/: CMakeLists.txt
Userland/Services/AccountServer/: AccountClient.ipc  AccountServer.ipc  AddUserWizardDialog.cpp  AddUserWizardDialog.h  AddUserWizardPage1.gml  AddUserWizardPage2.gml  AddUserWizardPage3.gml  CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  PasswordChangeDialog.cpp  PasswordChangeDialog.gml  PasswordChangeDialog.h  UserConfiguration.cpp  UserConfiguration.h  main.cpp
Userland/Services/SystemServer/: Service.cpp  Service.h
